--- a/apps/admin/Dockerfile
+++ b/apps/admin/Dockerfile
@@ -2,14 +2,7 @@
 # https://docs.docker.com/build/building/multi-stage/
 
 # Alpine image
-FROM node:24.11.0-alpine AS alpine
-RUN apk update
-RUN apk add --no-cache libc6-compat
-
-# Setup pnpm and turbo on the alpine base
-FROM alpine AS base
-RUN npm install pnpm turbo --global
-RUN pnpm config set store-dir ~/.pnpm-store
+FROM node:24.11.0-alpine AS base
 
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV TURBO_TELEMETRY_DISABLED=1
@@ -19,11 +12,18 @@ FROM base AS pruner
 WORKDIR /app
 
 COPY . .
-RUN turbo prune --scope=telli-admin --docker
+
+# setup pnpm and pnpm install in order to install turbo in the correct version
+RUN corepack enable && corepack prepare
+RUN pnpm install --frozen-lockfile --dev
+RUN pnpm turbo prune telli-admin --docker
 
 # Build the project
 FROM base AS builder
 WORKDIR /app
+
+# Git is required for sentry
+RUN apk add --no-cache git
 
 # Copy lockfile and package.json's of isolated subworkspace
 COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
@@ -31,13 +31,22 @@ COPY --from=pruner /app/out/pnpm-workspace.yaml ./pnpm-workspace.yaml
 COPY --from=pruner /app/out/json/ .
 
 # First install the dependencies (as they change less often)
-# RUN --mount=type=cache,id=pnpm,target=~/.pnpm-store pnpm install --frozen-lockfile
+RUN corepack enable && corepack prepare
 RUN pnpm install --frozen-lockfile
 
 # Copy source code of isolated subworkspace
 COPY --from=pruner /app/out/full/ .
 
-RUN turbo build:envless
+# Copy git history, required for sentry to determine release name
+COPY .git ./.git
+
+ARG CI
+
+RUN --mount=type=secret,id=SENTRY_AUTH_TOKEN,env=SENTRY_AUTH_TOKEN \
+    --mount=type=secret,id=SENTRY_ORG,env=SENTRY_ORG \
+    --mount=type=secret,id=SENTRY_PROJECT,env=SENTRY_PROJECT \
+    CI=${CI} \
+    pnpm turbo build:envless
 
 # Final image
 FROM base AS runner
@@ -47,6 +56,7 @@ RUN adduser --system --uid 1001 nodejs
 USER nodejs
 
 WORKDIR /app
+
 # copy nextjs application 
 COPY --from=builder --chown=nodejs:nodejs /app/apps/admin/.next/standalone ./
 COPY --from=builder --chown=nodejs:nodejs /app/apps/admin/.next/static ./apps/admin/.next/static
