--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"pnpm start:oidc\" \"next dev -p 3000 --turbo\"",
+    "dev": "next dev -p 3000 --turbo",
     "build": "next build",
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
-    "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
-    "build:oidc": "node e2e/load_test/esbuild.oidc.config.js",
     "lint": "next lint",
     "types": "tsc",
     "check-types": "next typegen && tsc --noEmit",
@@ -110,29 +108,24 @@
     "@eslint/eslintrc": "3.3.1",
     "@playwright/test": "1.56.1",
     "@telli/typescript-config": "workspace:*",
-    "@types/express": "5.0.5",
     "@types/he": "1.2.3",
     "@types/jsdom": "21.1.7",
     "@types/k6": "1.4.0",
     "@types/katex": "0.16.7",
     "@types/markdown-it": "14.1.2",
     "@types/node": "24.10.1",
-    "@types/oidc-provider": "9.5.0",
     "@types/pg": "8.15.6",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
     "@types/react-syntax-highlighter": "15.5.13",
-    "concurrently": "9.2.1",
     "esbuild": "0.27.0",
     "eslint": "9.39.1",
     "eslint-config-next": "15.5.6",
     "eslint-config-prettier": "10.1.8",
     "eslint-config-turbo": "2.6.1",
     "eslint-plugin-prettier": "5.5.4",
-    "express": "5.1.0",
     "jose": "6.1.2",
     "k6": "0.0.0",
-    "oidc-provider": "9.5.2",
     "playwright-core": "1.56.1",
     "prettier": "3.6.2",
     "prettier-eslint": "16.4.2",
