TD-609 include idp hint for vidis login

--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -41,3 +41,9 @@ VALKEY_URL="redis://localhost:6379/0"
 
 # RabbitMq for reporting
 RABBITMQ_URI=amqp://user:password@localhost:5672
+
+# Loadtest configuration
+LOADTEST_BASE_URL=http://localhost:3000
+LOADTEST_IDP_HINT=
+LOADTEST_PASSWORD=test
+LOADTEST_USERNAME=test
