--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -56,6 +56,7 @@
     "@sentry/opentelemetry": "10.27.0",
     "@t3-oss/env-nextjs": "0.13.8",
     "@tanstack/react-query": "5.90.10",
+    "@telli/ai-core": "workspace:*",
     "@telli/shared": "workspace:*",
     "@telli/ui": "workspace:*",
     "ai": "4.3.16",
