TD-702 update code for next-auth v5

--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,9 @@
     "VIDIS_CLIENT_ID",
     "VIDIS_CLIENT_SECRET",
     "VIDIS_ISSUER_URI",
+    "KEYCLOAK_CLIENT_ID",
+    "KEYCLOAK_CLIENT_SECRET",
+    "KEYCLOAK_ISSUER",
     "API_KEY",
     "API_URL",
     "ENCRYPTION_KEY",
