--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -35,6 +35,7 @@
     "nanoid": "5.1.6",
     "next": "15.5.9",
     "pg": "8.16.3",
+    "unstorage": "1.17.2",
     "zod": "4.1.12"
   },
   "devDependencies": {
