--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -28,6 +28,7 @@
     "@aws-sdk/s3-request-presigner": "3.934.0",
     "@dotenvx/dotenvx": "1.51.1",
     "@sentry/nextjs": "10.27.0",
+    "@telli/ai-core": "workspace:*",
     "@t3-oss/env-core": "0.13.8",
     "drizzle-kit": "0.31.7",
     "drizzle-orm": "0.44.7",
