--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -67,6 +67,7 @@
     "drizzle-zod": "0.8.3",
     "he": "1.2.0",
     "import-in-the-middle": "2.0.0",
+    "ioredis": "5.8.2",
     "isbinaryfile": "5.0.7",
     "jsdom": "26.1.0",
     "katex": "0.16.25",
