--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -1,3 +1,9 @@
+# Persistence
+DATABASE_URL=postgresql://postgres:test1234@127.0.0.1:5432/postgres
+API_DATABASE_URL=
+# Caching of database query results - should not be set in telli-admin
+DB_CACHE_TTL_SECONDS=
+
 NEXTAUTH_URL="http://localhost:3001"
 
 # For local development keycloak
