--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -14,6 +14,9 @@ VIDIS_BASE_URI=
 
 # Persistence
 DATABASE_URL=postgresql://postgres:test1234@127.0.0.1:5432/postgres
+API_DATABASE_URL=
+# Caching of database query results for 5 minutes
+DB_CACHE_TTL_SECONDS=300
 OTC_SECRET_ACCESS_KEY=
 OTC_ACCESS_KEY_ID=
 OTC_S3_HOSTNAME=
