--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "pnpm": {
     "overrides": {
-      "glob@<11.1.0": ">=11.1.0",
-      "require-in-the-middle": "8.0.1"
+      "glob@<11.1.0": ">=11.1.0"
     }
   }
 }
