--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "8.51.0",
     "@vitest/coverage-v8": "4.0.16",
     "eslint": "9.39.2",
+    "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-config-turbo": "2.7.2",
     "eslint-plugin-prettier": "5.5.4",
