TD-833 start crawl4ai in e2e pipeline

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -38,6 +38,11 @@ jobs:
         env:
           RABBITMQ_DEFAULT_PASS: password
           RABBITMQ_DEFAULT_USER: user
+      crawl4ai:
+        image: unclecode/crawl4ai:0.7.8
+        options: --shm-size=2gb
+        ports:
+          - 11235:11235
 
     env:
       DATABASE_URL: postgresql://telli_dialog_db:test1234@127.0.0.1:5432/telli_dialog_db
