--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,10 @@ updates:
     labels: ['dependencies']
     schedule:
       interval: 'weekly'
+    ignore:
+      # Ignore major version updates for Node.js (required to receive minor updates when staying on LTS)
+      - dependency-name: 'node'
+        update-types: ['version-update:semver-major']
 
   - package-ecosystem: 'docker-compose'
     directories:
