TD-284: added crawl4ai

--- a/turbo.json
+++ b/turbo.json
@@ -29,7 +29,8 @@
     "SENTRY_ENVIRONMENT",
     "NEXT_PUBLIC_SENTRY_LOG_LEVEL",
     "API_DATABASE_URL",
-    "DB_CACHE_TTL_SECONDS"
+    "DB_CACHE_TTL_SECONDS",
+    "CRAWL4AI_URL"
   ],
   "tasks": {
     "build": {
