dependabot: group minor and patch updates for docker

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,13 @@ updates:
       # Ignore major version updates for Node.js (required to receive minor updates when staying on LTS)
       - dependency-name: 'node'
         update-types: ['version-update:semver-major']
+    groups:
+      # Group safe, non-breaking bumps to reduce PRs
+      minor-and-patch:
+        applies-to: version-updates
+        update-types:
+          - 'minor'
+          - 'patch'
 
   - package-ecosystem: 'docker-compose'
     directories:
