--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -50,3 +50,6 @@ LOADTEST_BASE_URL=http://localhost:3000
 LOADTEST_IDP_HINT=
 LOADTEST_PASSWORD=test
 LOADTEST_USERNAME=test
+
+# Crawl4AI configuration
+CRAWL4AI_URL=http://localhost:11235
