--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -35,7 +35,7 @@
     "@deutschlandgpt/core": "0.1.5",
     "@dotenvx/dotenvx": "1.51.4",
     "@hookform/resolvers": "3.10.0",
-    "@mozilla/readability": "^0.6.0",
+    "@mozilla/readability": "0.6.0",
     "@opentelemetry/api": "1.9.0",
     "@opentelemetry/auto-instrumentations-node": "0.68.0",
     "@opentelemetry/exporter-metrics-otlp-http": "0.210.0",
@@ -69,8 +69,8 @@
     "he": "1.2.0",
     "import-in-the-middle": "2.0.4",
     "ioredis": "5.9.2",
-    "isbinaryfile": "^6.0.0",
-    "jsdom": "^27.4.0",
+    "isbinaryfile": "6.0.0",
+    "jsdom": "26.1.0",
     "katex": "0.16.27",
     "mammoth": "1.11.0",
     "markdown-it": "14.1.0",
