TD-891 add GOOGLE_APPLICATION_CREDENTIALS to .env.example

--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -53,3 +53,6 @@ LOADTEST_USERNAME=test
 
 # Crawl4AI configuration
 CRAWL4AI_URL=http://localhost:11235
+
+# Google Vertex AI (Image Generation): path to the service account json file
+GOOGLE_APPLICATION_CREDENTIALS=
