--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -239,9 +239,13 @@ jobs:
           push-to-registry: true
 
   deploy_apps:
-    name: Deploy to staging
+    name: Deploy to staging (${{ matrix.kube_context }})
     runs-on: ubuntu-latest
     needs: [build_push_docker_image_dialog, build_push_docker_image_admin]
+    strategy:
+      fail-fast: false
+      matrix:
+        kube_context: [ionos, otc]
 
     steps:
       - name: Checkout code
@@ -252,7 +256,7 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBECONFIG_FILE }}
-          context: ''
+          context: ${{ matrix.kube_context }}
 
       - name: Restart Kubernetes deployment
         run: |
