--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -27,6 +27,15 @@
     "@aws-sdk/client-s3": "3.971.0",
     "@aws-sdk/s3-request-presigner": "3.971.0",
     "@dotenvx/dotenvx": "1.51.4",
+    "@opentelemetry/api": "1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "0.68.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.210.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.210.0",
+    "@opentelemetry/resources": "2.4.0",
+    "@opentelemetry/sdk-metrics": "2.4.0",
+    "@opentelemetry/sdk-node": "0.210.0",
+    "@opentelemetry/sdk-trace-node": "2.4.0",
+    "@opentelemetry/semantic-conventions": "1.39.0",
     "@sentry/nextjs": "10.34.0",
     "@telli/ai-core": "workspace:*",
     "@t3-oss/env-core": "0.13.10",
