--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -28,15 +28,16 @@
     "@aws-sdk/s3-request-presigner": "3.971.0",
     "@dotenvx/dotenvx": "1.51.4",
     "@opentelemetry/api": "1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "0.68.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "0.210.0",
-    "@opentelemetry/exporter-trace-otlp-http": "0.210.0",
-    "@opentelemetry/resources": "2.4.0",
-    "@opentelemetry/sdk-metrics": "2.4.0",
-    "@opentelemetry/sdk-node": "0.210.0",
-    "@opentelemetry/sdk-trace-node": "2.4.0",
+    "@opentelemetry/auto-instrumentations-node": "0.69.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.211.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.211.0",
+    "@opentelemetry/resources": "2.5.0",
+    "@opentelemetry/sdk-metrics": "2.5.0",
+    "@opentelemetry/sdk-node": "0.211.0",
+    "@opentelemetry/sdk-trace-node": "2.5.0",
     "@opentelemetry/semantic-conventions": "1.39.0",
-    "@sentry/nextjs": "10.34.0",
+    "@sentry/nextjs": "10.37.0",
+    "@sentry/opentelemetry": "10.37.0",
     "@telli/ai-core": "workspace:*",
     "@t3-oss/env-core": "0.13.10",
     "drizzle-kit": "0.31.8",
