--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "check-types": "tsc --noEmit",
+    "lint": "eslint \"**/*.ts*\" --max-warnings 0"
+  },
   "dependencies": {
     "@radix-ui/react-checkbox": "1.3.3",
     "@radix-ui/react-collapsible": "1.1.12",
@@ -32,6 +35,7 @@
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.4",
     "eslint-config-prettier": "10.1.8",
+    "eslint-config-turbo": "2.7.6",
     "eslint-plugin-prettier": "5.5.5",
     "postcss": "8.5.6",
     "prettier": "3.8.1",
