--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": "0.45.1",
     "drizzle-zod": "0.8.3",
     "google-auth-library": "10.5.0",
+    "js-tiktoken": "^1.0.21",
     "openai": "6.9.1",
     "openaiv4": "npm:openai@4.104.0",
     "pg": "8.17.1",
