TD-917 configure sentry trace sample rate from env vars

--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -24,3 +24,7 @@ SENTRY_ENVIRONMENT=development
 SENTRY_DSN=
 # fatal, error, warning, log, info, debug
 NEXT_PUBLIC_SENTRY_LOG_LEVEL=
+
+# Sentry sample rate for traces
+SENTRY_TRACES_SAMPLE_RATE=1.0
+SENTRY_TRACES_SAMPLE_RATE_CLIENT=0.1
