--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -56,3 +56,7 @@ CRAWL4AI_URL=http://localhost:11235
 
 # Google Vertex AI (Image Generation): path to the service account json file
 GOOGLE_APPLICATION_CREDENTIALS=
+
+# Sentry sample rate for traces
+SENTRY_TRACES_SAMPLE_RATE=1.0
+SENTRY_TRACES_SAMPLE_RATE_CLIENT=0.1
