--- a/turbo.json
+++ b/turbo.json
@@ -27,6 +27,8 @@
     "OTEL_METRIC_EXPORT_TIMEOUT",
     "SENTRY_DSN",
     "SENTRY_ENVIRONMENT",
+    "SENTRY_TRACES_SAMPLE_RATE",
+    "SENTRY_TRACES_SAMPLE_RATE_CLIENT",
     "NEXT_PUBLIC_SENTRY_LOG_LEVEL",
     "API_DATABASE_URL",
     "DB_CACHE_TTL_SECONDS",
