--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "pnpm": {
     "overrides": {
+      "@isaacs/brace-expansion@<5.0.1": ">=5.0.1",
       "glob@<11.1.0": ">=11.1.0"
     }
   }
