TD-919 start telli-api as container in e2e tests

--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -4,14 +4,15 @@ API_DATABASE_URL=
 # Caching of database query results - should not be set in telli-admin
 DB_CACHE_TTL_SECONDS=
 
+# Authentication
 NEXTAUTH_URL="http://localhost:3001"
+# Auth.js secret
+AUTH_SECRET="REPLACE_ME"
 
 # For local development keycloak
 #KEYCLOAK_CLIENT_ID=telli-dev-client
 #KEYCLOAK_CLIENT_SECRET=ClientSecret
 #KEYCLOAK_ISSUER=http://localhost:8080/realms/telli-local
-
-AUTH_SECRET="REPLACE_ME"
 
 BASE_URL_TELLI_API="http://localhost:3002"
 API_KEY_TELLI_API="REPLACE_ME"
