TD-919 seed telli-api db

--- a/turbo.json
+++ b/turbo.json
@@ -32,7 +32,13 @@
     "NEXT_PUBLIC_SENTRY_LOG_LEVEL",
     "API_DATABASE_URL",
     "DB_CACHE_TTL_SECONDS",
-    "CRAWL4AI_URL"
+    "CRAWL4AI_URL",
+    "LLM_IONOS_API_KEY",
+    "LLM_IONOS_BASE_URL",
+    "LLM_GPT4OMINI_API_KEY",
+    "LLM_GPT4OMINI_BASE_URL",
+    "LLM_GPT5NANO_API_KEY",
+    "LLM_GPT5NANO_BASE_URL"
   ],
   "tasks": {
     "build": {
