--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -99,6 +99,12 @@ jobs:
           SENTRY_ENVIRONMENT: op://telli Engineering/.env.e2e chatbot/SENTRY_ENVIRONMENT
           SENTRY_DSN: op://telli Engineering/.env.e2e chatbot/SENTRY_DSN
           DE_TEST_API_KEY: op://telli Engineering/.env.e2e chatbot/DE_TEST_API_KEY
+          LLM_IONOS_API_KEY: op://telli Engineering/.env.e2e chatbot/DE_TEST_API_KEY
+          LLM_IONOS_BASE_URL: op://telli Engineering/.env.e2e chatbot/DE_TEST_API_KEY
+          LLM_GPT4OMINI_API_KEY: op://telli Engineering/.env.e2e chatbot/DE_TEST_API_KEY
+          LLM_GPT4OMINI_BASE_URL: op://telli Engineering/.env.e2e chatbot/DE_TEST_API_KEY
+          LLM_GPT5NANO_API_KEY: op://telli Engineering/.env.e2e chatbot/DE_TEST_API_KEY
+          LLM_GPT5NANO_BASE_URL: op://telli Engineering/.env.e2e chatbot/DE_TEST_API_KEY
 
       - name: Wait for PostgreSQL to be ready
         run: |
@@ -144,11 +150,11 @@ jobs:
       - name: Install Playwright browsers
         run: pnpm -filter telli-dialog exec playwright install
 
-      - name: Run migrations and seed database (if applicable)
-        run: pnpm --filter @telli/shared db:migrate && pnpm --filter @telli/shared db:seed
-
       - name: Seed telli-api database
         run: pnpm --filter @telli/ai-core db:seed:telli-api
+
+      - name: Run migrations and seed database (if applicable)
+        run: pnpm --filter @telli/shared db:migrate && pnpm --filter @telli/shared db:seed
 
       - name: Start application
         run: |
