--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check .",
     "types": "tsc --noEmit",
     "check-types": "tsc --noEmit",
+    "db:seed:telli-api": "tsx src/api-db/seed/index.ts",
     "lint": "eslint \"**/*.ts*\" --max-warnings 0",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -36,11 +37,13 @@
     "@typescript-eslint/eslint-plugin": "8.53.1",
     "@typescript-eslint/parser": "8.53.1",
     "@vitest/coverage-v8": "4.0.18",
+    "bcryptjs": "3.0.3",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.4",
     "eslint-config-prettier": "10.1.8",
     "eslint-config-turbo": "2.7.6",
     "eslint-plugin-prettier": "5.5.5",
+    "nanoid": "5.1.6",
     "prettier": "3.8.1",
     "prettier-eslint": "16.4.2",
     "typescript": "5.9.3",
