--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -155,7 +155,7 @@ jobs:
       - name: Start application
         run: |
           NODE_ENV=test pnpm --filter telli-dialog build:envless
-          pnpm --filter telli-dialog start &
+          pnpm --filter telli-dialog start > /tmp/telli-dialog.log &
         env:
           NEXT_TELEMETRY_DISABLED: 1
           TURBO_TELEMETRY_DISABLED: 1
@@ -177,3 +177,9 @@ jobs:
         run: |
           echo "=== telli-api logs ==="
           docker logs --timestamps telli-api || true
+
+      - name: Print telli-dialog logs
+        if: always()
+        run: |
+          echo "=== telli-dialog logs ==="
+          cat /tmp/telli-dialog.log || true
