--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,16 +8,11 @@
     "lint": "eslint \"**/*.ts*\" --max-warnings 0"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "1.3.3",
-    "@radix-ui/react-collapsible": "1.1.12",
-    "@radix-ui/react-label": "2.1.8",
-    "@radix-ui/react-select": "2.2.6",
-    "@radix-ui/react-separator": "1.1.8",
-    "@radix-ui/react-slot": "1.2.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.564.0",
     "next-themes": "0.4.6",
+    "radix-ui": "1.4.3",
     "sonner": "2.0.7",
     "tailwind-merge": "3.4.0",
     "tailwindcss-animate": "1.0.7",
@@ -51,6 +46,7 @@
     "./tailwind.config": "./tailwind.config.ts",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
+    "./hooks/*": "./src/hooks/*.ts",
     "./types/*": "./src/types/*.ts"
   }
 }
