--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,12 +12,12 @@
     "types": "tsc --noEmit",
     "test": "vitest run --coverage",
     "test:watch": "vitest run --watch",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed",
+    "e2e:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@telli/api-database": "workspace:*",
-    "@telli/api-llm-model": "workspace:*",
-    "@telli/api-utils": "workspace:*",
     "@fastify/cors": "11.2.0",
     "@fastify/multipart": "9.4.0",
     "@fastify/otel": "0.16.0",
@@ -36,7 +36,9 @@
     "@sentry/opentelemetry": "10.38.0",
     "@sentry/profiling-node": "10.38.0",
     "@t3-oss/env-core": "0.13.10",
-    "dotenv": "17.3.1",
+    "@telli/api-database": "workspace:*",
+    "@telli/api-llm-model": "workspace:*",
+    "@telli/api-utils": "workspace:*",
     "fastify": "5.7.4",
     "fastify-graceful-shutdown": "5.0.0",
     "google-auth-library": "10.5.0",
@@ -46,11 +48,13 @@
     "zod": "4.3.6"
   },
   "devDependencies": {
+    "@playwright/test": "1.58.2",
+    "@sentry/esbuild-plugin": "4.9.1",
     "@telli/api-eslint-config": "workspace:*",
     "@telli/api-typescript-config": "workspace:*",
-    "@sentry/esbuild-plugin": "4.9.1",
     "@types/node": "24.10.13",
     "@vitest/coverage-v8": "4.0.18",
+    "dotenv": "17.3.1",
     "eslint": "9.39.2",
     "tsup": "8.5.1",
     "tsx": "4.21.0",
