--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -109,6 +109,24 @@ jobs:
   check_unit_tests:
     runs-on: ubuntu-latest
     needs: install
+    env:
+      DATABASE_URL: postgresql://test_user:test1234@localhost:5432/telli_api_db
+      API_KEY: random-key-for-testing-only
+
+    services:
+      postgres:
+        image: postgres:16
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test1234
+          POSTGRES_DB: telli_api_db
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
