--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -139,7 +139,7 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
-      - name: Run database migrations
+      - name: Run api database migrations
         run: pnpm --filter @telli/api-database run db:migrate:pipeline
       - name: Check unit tests
         run: pnpm run test
