--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -44,7 +44,7 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@sentry/nextjs": "10.38.0",
     "@t3-oss/env-nextjs": "0.13.10",
-    "@tailwindcss/postcss": "^4.2.1",
+    "@tailwindcss/postcss": "4.2.1",
     "@tanstack/react-query": "5.90.21",
     "@telli/ai-core": "workspace:*",
     "@telli/shared": "workspace:*",
