--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -11,5 +11,5 @@
     "types": ["node"]
   },
   "exclude": ["node_modules", "coverage"],
-  "include": ["src", "tests", "*.ts", "*.mts"]
+  "include": ["src", "tests", "e2e", "*.ts", "*.mts"]
 }
