--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@sentry/nextjs": "10.39.0",
     "@t3-oss/env-nextjs": "0.13.10",
+    "@tailwindcss/postcss": "4.2.1",
     "@tanstack/react-query": "5.90.21",
     "@telli/ai-core": "workspace:*",
     "@telli/shared": "workspace:*",
@@ -86,7 +87,7 @@
     "sentence-splitter": "5.0.0",
     "sharp": "0.34.5",
     "tailwind-merge": "3.5.0",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "4.2.1",
     "tailwindcss-animate": "1.0.7",
     "tsx": "4.21.0",
     "unpdf": "1.4.0",
